--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <div>
         <img id= "gif" src="img/lali.gif" alt="gif"></div>
         <div id="inicio">
-            <p>VOLVER AL INICIO</p> 
+            <a href="#">VOLVER AL INICIO</a>
          </div>
     </div>
 
