--- a/index.html
+++ b/index.html
@@ -19,9 +19,13 @@
 
     <div class="contenedor">
         <div class="e404">
-            <img id="disco" src="img/disco.gif" alt="disco">
+            <div id="disco">
+                <img src="img/disco.gif" alt="disco">
+                <div class="sombra"></div>
+            </div>
             <img id="x4" src="img/4.png" alt="4">
         </div>
+       
         <h1>¡Vaya! Está página no se encuentra.</h1>
         <p>Parece que no hay nada en esa ubicación.</p> 
     </div>
