--- a/index.html
+++ b/index.html
@@ -9,21 +9,24 @@
     <div>
         <img id= "gif" src="img/lali.gif" alt="gif"></div>
         <div id="inicio">
-            <a href="index.html">VOLVER AL INICIO</a>
+            <a href="../Eddi_ProduccionDigital2/index.html">VOLVER AL INICIO</a>
          </div>
     </div>
 
 	<div class= "logo">
-        <img id="logoimg" src="img/logo.png" alt="logo"> 
+        <a href="../Eddi_ProduccionDigital2/index.html"><img id="logoimg" src="img/logo.png" alt="logo"></a>
     </div> 
 
     <div class="contenedor">
         <div class="e404">
             <div id="disco">
-                <img src="img/disco.gif" alt="disco">
-                <div class="sombra"></div>
+                <img src="img/disco.png" alt="disco">
+            </div>
+            <div id="discoroto">
+                <img src="img/discoroto.gif" alt="discoroto">
             </div>
             <img id="x4" src="img/4.png" alt="4">
+            <div class="sombra"></div>
         </div>
        
         <h1>¡Vaya! Está página no se encuentra.</h1>
