--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </head>
 <body>
     <div>
-        <img id= "gif" src="img/lali.gif" alt="gif"></div>
+        <img id= "gif" src="img/lali.gif" alt="laligif"></div>
         <div id="inicio">
             <a href="../Eddi_ProduccionDigital2/index.html">VOLVER AL INICIO</a>
          </div>
